src/apps/esponFuore/styles/index.scss
@import '../../../styles/variables';
@import './variables';

.ptr-light {

	--accent0: #{$lightAccent0};
	--accent0rgb: #{$lightAccent0rgb};
	--accent05: #{$lightAccent05};
	--accent10: #{$lightAccent10};
	--accent15: #{$lightAccent15};
	--accent20: #{$lightAccent20};
	--accent25: #{$lightAccent25};
	--accent30: #{$lightAccent30};
	--accent35: #{$lightAccent35};
	--accent40: #{$lightAccent40};
	--accent45: #{$lightAccent45};
	--accent50: #{$lightAccent50};
	--accent50rgb: #{$lightAccent50rgb};
	--accent55: #{$lightAccent55};
	--accent60: #{$lightAccent60};
	--accent65: #{$lightAccent65};
	--accent70: #{$lightAccent70};
	--accent75: #{$lightAccent75};
	--accent80: #{$lightAccent80};
	--accent85: #{$lightAccent85};
	--accent90: #{$lightAccent90};
	--accent95: #{$lightAccent95};
	--accent100: #{$lightAccent100};
	--accent100rgb: #{$lightAccent100rgb};
}

.esponFuore-app {
	height: 100%;
	display: flex;
	flex-direction: column;
}

$headerHeight: m(2);

.esponFuore-header {
	flex: 0 0 $headerHeight;
	max-height: $headerHeight;
	display: flex;
	z-index: 20;
}

.esponFuore-content {
	flex: 1;
	max-height: calc(100% - #{$headerHeight});
}



.esponFuore-header-home {
	flex: 0 0 7rem;
	background-color: #fff;
	position: relative;
}
.esponFuore-header-home > a {
	display: block;
	width: 6rem;
	height: 2.125rem;
	padding: 0 .5rem;
	position: absolute;
	top: 50%;
	left: 50%;
	transform: translate(-50%,-50%);
	cursor: pointer;
}
.esponFuore-header-home::after {
	content: " ";
	position: absolute;
	top: 50%;
	right: 0;
	height: 60%;
	width: 1px;
	transform: translateY(-50%);
	background-color: var(--base20);
}
.esponFuore-header-region-select {
	flex: 0 0 16rem;
	background-color: #fff;
}
.esponFuore-header-indicator-select {
	flex: 0 0 30rem;
	max-width: 30rem;
	background-color: var(--accent50);
}
.esponFuore-header-toolbar {
	flex: 1;
	display: flex;
	background-color: #3c5772;
  align-items: center;

}
.esponFuore-header-toolbar > div {
	//padding: 0 .5rem 0 1.5rem;
}
.esponFuore-header-toolbar > div:first-child {
	flex: 1;
}
.esponFuore-header-toolbar-right {
	flex: 0 0 5rem;
	padding: 0 .5rem;
}
.esponFuore-header-toolbar,
.esponFuore-header-toolbar .ptr-button.invisible.inverted {
	color: rgba(255,255,255,.75);
}

.esponFuore-header-toolbar .ptr-menu {
	z-index: 40;
}

.esponFuore-header-toolbar .ptr-button.invisible.inverted:hover {
  background-color: rgba(255,255,255,.15);
}



/* indicator select */
.esponFuore-indicator-select-current {
	height: m(3);
	background-color: var(--accent50);
}
.esponFuore-indicator-select-current .ptr-panther-select-current-icon {
	position: relative;
	width: 2rem;
	flex-basis: 2rem;
	padding: 1.5rem .25rem;
}
.esponFuore-indicator-select-current .ptr-panther-select-current-icon::after {
	position: absolute;
	top: 0;
	left: 0;
	height: 100%;
	width: 1px;
	content: '';
	background-color: #fff3;
}
.esponFuore-indicator-select-current .ptr-panther-select-current-icon svg {
	width: 1.5rem;
	height: 1.5rem;
}
.esponFuore-indicator-select-current .ptr-panther-select-current-icon svg .line {
	fill: #fffc;
}

.ptr-panther-select-list.esponFuore-indicator-select-list {
	padding-top: 3rem;
	z-index: 40;
}
.esponFuore-indicator-select-list.ptr-panther-select-list > div > div {
	height: 100%;
	transition: transform .5s ease-in-out;
}
.esponFuore-indicator-select-content {
	height: 100%;
	background: linear-gradient(var(--accent50) 55%, var(--accent70) 100%);
	background-size: auto 200%;
	background-position: 0 0;
	transition: background-position .5s ease-in-out;
}
.esponFuore-indicator-select.open .esponFuore-indicator-select-content {
	//background: linear-gradient(var(--accent50) 10%, var(--accent100) 100%);
	background-position: 0 100%;
}

/* map controls */
.esponFuore-app .map-controls {
	bottom: m(5/3)
}

@media screen and (max-width: 75rem)  {
	.esponFuore-header-region-select {
		flex: 0 0 12rem;
	}
	.esponFuore-header-indicator-select {
		flex: 0 0 20rem;
		max-width: 20rem;
	}
}

@media screen and (max-width: 55rem)  {
	.esponFuore-header-region-select {
		display: none;
	}
}

